--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,10 @@
       content="site de location d’appartements entre particuliers en France"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap');
+    </style>
    
     <title>KASA</title>
   </head>
